kubeops-gpol/config-syncer-secret-generation-from-rancher-capi/.chainsaw-test/chainsaw-step-01-apply-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeops-cluster-ns
