kubeops-gpol/config-syncer-secret-generation-from-rancher-capi/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: config-syncer-secret-generation-from-rancher-capi
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: chainsaw-step-00-assert-1.yaml
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1.yaml
    - apply:
        file: chainsaw-step-01-apply-2.yaml
    - apply:
        file: chainsaw-step-01-apply-3.yaml
    - apply:
        file: chainsaw-step-01-apply-4.yaml
    - apply:
        file: chainsaw-step-01-apply-5.yaml
  - name: step-02
    try:
    - apply:
        file: ../config-syncer-secret-generation-from-rancher-capi.yaml
    - assert:
        file: policy-ready.yaml
    - assert:
        file: secret-generated01.yaml
  - name: step-03
    try:
    - apply:
        file: chainsaw-step-03-apply-1.yaml
  - name: step-04
    try:
    - apply:
        file: cluster.yaml
    - assert:
        file: secret-generated02.yaml
